--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Django==1.4.15
 django-iban==0.2.6
 celery==3.0.12
--e git+https://github.com/izquierdo/python-money.git@5c14ce00d9472ddce55bb7a799f6051509dbd092#egg=python_money
+py-moneyed==0.5.0
+django-money==0.6.0
 -e git+https://github.com/FundedByMe/mangopay2-python-sdk.git@secure-mode-redirect-url#egg=mangopaysdk
 Sphinx==1.2.2
 django-model-utils==1.4.0
