--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ django-localflavor==1.1
 django-countries
 celery==3.0.12
 -e git+https://github.com/izquierdo/python-money.git@5c14ce00d9472ddce55bb7a799f6051509dbd092#egg=python_money
+docutils==0.12
+jinja2==2.8
 mangopaysdk==2.0
 Sphinx==1.2.2
 django-model-utils==1.4.0
 django-storages==1.1.8
 requests==2.2.1
+requests-oauthlib==0.6.1
 django-jsonfield==0.9.15
 django-filepicker==0.2.2
